# shader-playground

./: CMakeLists.txt
include/glad/: gl.h
shaders/: shader.frag  shader.vert
src/: main.c
